# work-tuimer

./: .opencode.json  AGENTS.md  Cargo.toml  README.md  TASKS.md  justfile  shell.nix
.github/: FUNDING.yml
data/: 2025-10-31.json
docs/: IMPLEMENTATION_PLAN.md  SESSIONS.md  THEMING.md
packaging/: README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/integrations/: mod.rs
src/models/: day_data.rs  mod.rs  time_point.rs  work_record.rs
src/storage/: mod.rs  storage.rs
src/timer/: mod.rs
src/ui/: app_state.rs  history.rs  mod.rs  render.rs
tests/: storage_manager_integration.rs
