[package]
name = "work-tuimer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing", "local-offset"] }
fuzzy-matcher = "0.3"
