[package]
name = "work-tuimer"
version = "0.3.5"
edition = "2024"
authors = ["Kamil Ksen <kamyilksen@gmail.pl>"]
description = "Simple, keyboard-driven TUI for time-tracking that allows you to quickly add time blocks and automatically group time if same task was done in different sessions"
license = "MIT"
repository = "https://github.com/Kamyil/work-tuimer"
homepage = "https://github.com/Kamyil/work-tuimer"
documentation = "https://github.com/Kamyil/work-tuimer#readme"
readme = "README.md"
keywords = ["tui", "time-tracking", "productivity", "terminal", "ratatui"]
categories = ["command-line-utilities", "date-and-time"]
exclude = [
    ".github/",
    ".DS_Store",
    "data/",
    "packaging/",
    "*.png",
    "shell.nix",
    "justfile",
    "AGENTS.md",
    "TASKS.md",
    "PACKAGING_GUIDE.md"
]

[lib]
name = "work_tuimer"
path = "src/lib.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing", "local-offset"] }
fuzzy-matcher = "0.3"
toml = "0.8"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target-family }-x86_64{archive-suffix}"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-x86_64{archive-suffix}"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-aarch64{archive-suffix}"
